# demhack_safety_vision_mvp

./: .gitignore  README.md  prompt_safety_vision_0.1.txt  pyproject.toml
config/: global.yaml
data/: prompt_safety_vision_0.1.md
data/prompts/: research-01.md  safety_vision_0.1.md  safety_vision_0.2.md  spam_0.1.md
research/: stat.py
src/: export-chat.py  process-export-01.py  process-export.py
src/module/: config.py  export.py  utils.py
src/research/: openai_url_check.py  stat.py  virustotal_url_check.py
