[project]
name = "demhack-safety-vision-mvp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruamel-yaml>=0.18.6",
    "telethon>=1.36.0"
]

[tool.hatch.build]
include = [
    "src"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
