[project]
name = "demhack-safety-vision-mvp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "numpy>=2.1.1",
    "pyautogen>=0.2.18",
    "ruamel-yaml>=0.18.6",
    "ruff>=0.6.6",
    "spacy>=3.7.6",
    "telethon>=1.36.0",
]

[tool.hatch.build]
include = [
    "src"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
